packages/cashc/test/compiler/ParseError/misspelled_contract_definition.cash
// cspell:disable-next-line
contrat Test(int argument) {

}
